# renovate-uv-transitive-osv-repro

./: README.md  pyproject.toml  renovate.json
